create a context and a reducer, the context component fetches the data from the github api and the reducer update the context state

--- a/src/scss/partials/_navbar.scss
+++ b/src/scss/partials/_navbar.scss
@@ -10,7 +10,7 @@ header {
     li {
       font-size: 2rem;
       list-style: none;
-      font-weight: 600;
+      font-weight: $font-bold;
     }
   }
 }
