--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -2,3 +2,9 @@ $White: hsl(0, 0%, 100%);
 $Blue: hsl(177, 40%, 45%);
 $Light-Black: hsl(213, 24%, 16%);
 $Black: hsl(228, 19%, 5%);
+
+// Typography
+
+$font-normal: 400;
+$font-semi-bold: 500;
+$font-bold: 600;
