--- a/src/scss/partials/_global.scss
+++ b/src/scss/partials/_global.scss
@@ -40,7 +40,7 @@ body {
   background-color: $Black;
   color: $White;
   font-family: "Poppins", sans-serif;
-  font-weight: 400;
+  font-weight: $font-normal;
 }
 
 /* A elements that don't have a class get default styles */
@@ -93,5 +93,5 @@ button {
   padding: 0.4rem 2rem;
   margin: 0.5rem 0;
   border-radius: 0.2rem;
-  font-weight: 500;
+  font-weight: $font-semi-bold;
 }
