created a component user that display the full details of the search user when the user clicks view more info about the searched user

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,3 +4,4 @@
 @import "./partials/navbar";
 @import "./partials/userCardStyle.scss";
 @import "./partials/searchForm";
+@import "./partials/user";
