--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -1,5 +1,5 @@
 $White: hsl(0, 0%, 100%);
-$Blue: hsl(177, 40%, 45%);
+$Blue: rgb(75, 106, 155);
 $Light-Black: hsl(213, 24%, 16%);
 $Black: hsl(228, 19%, 5%);
 
