--- a/src/scss/partials/_global.scss
+++ b/src/scss/partials/_global.scss
@@ -43,6 +43,11 @@ body {
   font-weight: $font-normal;
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
 /* A elements that don't have a class get default styles */
 a:not([class]) {
   text-decoration-skip-ink: auto;
