--- a/src/scss/partials/_mixing.scss
+++ b/src/scss/partials/_mixing.scss
@@ -8,3 +8,9 @@
   @include centerFlex();
   flex-direction: column;
 }
+
+@mixin grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  column-gap: 1.5rem;
+}
