--- a/src/scss/partials/_user.scss
+++ b/src/scss/partials/_user.scss
@@ -1,15 +1,28 @@
 .user__wrapper {
   background: $Light-Black;
   margin: 2rem auto;
-  padding: 2rem 5rem;
+  padding: 2rem 1rem;
   border-radius: 0.3rem;
 }
 
+.back__home__btn {
+  background: $Blue;
+  display: inline-block;
+  padding: 0.7rem 1.5rem;
+  margin: 2rem 0;
+  border-radius: 0.3rem;
+}
+
+.profile__img {
+  margin: auto;
+}
+
 .profile__details {
-  margin-left: 3rem;
+  text-align: center;
+  margin: 2rem auto;
 
   & > p {
-    margin-bottom: 0.8rem;
+    margin-bottom: 0.9rem;
   }
 
   .github__link {
@@ -33,7 +46,7 @@
 }
 
 .grid:not(:first-child) {
-  margin-top: 1.5rem;
+  margin-top: 2rem;
 }
 .grid:nth-child(3) {
   background: $Blue;
@@ -45,11 +58,14 @@
 .flex {
   display: flex;
   align-items: center;
-  margin: 1rem 0;
+  margin: 0.7rem 0;
 }
 
 .bio {
-  width: 80%;
+  // width: 80%;
+  margin: auto;
+  text-align: center;
+  font-size: 1.5rem;
 }
 
 .location__and__website {
@@ -65,4 +81,19 @@
   margin-right: 1rem;
   font-size: 1.5rem;
   color: $Blue;
+}
+
+@media screen and (min-width: 1024px) {
+  .user__wrapper {
+    padding: 2rem 4rem;
+  }
+
+  .profile__details {
+    text-align: left;
+    margin-left: 3rem;
+  }
+
+  .bio {
+    text-align: left;
+  }
 }
